--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         
         <section class="Contact">
             <h2>Comment me contacter ?</h2>
-            <p>Je recherche une <stron>alternance</stron> de 12 ou 24 mois en agence ou bien dans petite entreprise à partir de <strong>septembre 2023</strong> ! 
+            <p>Je recherche une <strong>alternance</strong> de <strong>12 ou 24 mois</strong> en agence ou bien dans petite entreprise à partir de <strong>septembre 2023</strong> ! 
                 Si mon profil peut vous intéresser, n'hesitez surtout pas à me <strong>contacter</strong> avec les informations ci-dessous et 
                 n'hésitez pas à <strong>partager</strong> mon portfolio s'il vous a plu!</p>
             </p>
