:bug: font update

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     </section>
     <div class="horizontalContainer">
         <section class="threeD">
-            <div class="circle circle1"></div>
-            <div class="circle circle2"></div>
+            <!-- <div class="circle circle1"></div>
+            <div class="circle circle2"></div> -->
             <section class="newBackground">
                 <section class="horizontal panel">
                     <div class="img1"></div>
